refactor code files

--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -11,7 +11,7 @@
 
   <div class="callout primary">
     <h3>My IP Address</h3>
-    <p><%= @ip %></p>
+    <p><%= @geolocation.ip %></p>
   </div>
 
   <div class="callout primary">
